# clipkeeper

./: LICENSE  MANEFEST.in  README.md  requirements.txt  setup.cfg  setup.py
clipkeeper/: __init__.py  run.py
clipkeeper/cli/: __init__.py  commands.py
clipkeeper/core/: __init__.py  clipboard.py  manager.py
clipkeeper/utils/: __init__.py  logger.py
clipkeeper/web/: __init__.py  server.py
clipkeeper/web/static/css/: styles.css
clipkeeper/web/static/js/: main.js
clipkeeper/web/templates/: index.html
