# setup.cfg
[metadata]
name = clipkeeper
version = attr: clipkeeper.__version__
description = A Windows-based clipboard history manager
long_description = file: README.md
long_description_content_type = text/markdown
author = wittiness
url = https://github.com/wittiness/clipkeeper
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
python_requires = >=3.8
install_requires =
    Flask>=2.3.0,<3.0.0
    Flask-SocketIO>=5.0.0,<6.0.0
    click>=8.1.3,<9.0.0
    Werkzeug>=2.3.0,<3.0.0
    Jinja2>=3.1.2,<4.0.0
    itsdangerous>=2.1.2,<3.0.0
    python-dateutil>=2.8.2,<3.0.0
    rich>=13.4.1
    colorama>=0.4.6
    pyperclip>=1.8.3
    pywin32>=305

[options.extras_require]
windows =
    pywin32>=305
dev =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    pytest-mock>=3.10.0
    black>=23.0.0
    flake8>=6.0.0
    mypy>=1.0.0
    isort>=5.0.0
    Sphinx>=6.0.0
    sphinx-rtd-theme>=1.2.0
    build>=0.10.0
    twine>=4.0.0

[options.entry_points]
console_scripts =
    clipkeeper = clipkeeper.cli:cli

[flake8]
max-line-length = 88
extend-ignore = E203
exclude = .git,__pycache__,build,dist

[tool:pytest]
testpaths = tests
python_files = test_*.py
addopts = --cov=clipkeeper --cov-report=term-missing

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
